--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "11ty",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": ".eleventy.js",
   "scripts": {
     "start": "eleventy --serve",
     "build": "npx @11ty/eleventy"
